homework/5.kubernetes-network/postgres/deploy_redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
spec:
  selector:
    matchLabels:
      app: redmine-container
  template:
    metadata:
      labels:
        app: redmine-container
    spec:
      containers:
        - name: redmine-container
          image: redmine:4.1.1
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume-mount
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-pvc
