homework/5.kubernetes-network/postgres/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: postgres-container
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
spec:
  selector:
    app: redmine-container
  ports:
    - port: 3000
      nodePort: 30033
      targetPort: 3000
  type: NodePort
